<resources>
    <!--    <string name="facebook_app_id">3271046286455963</string>-->
    <!--    <string name="facebook_app_id">943988193037418</string>-->
    <string name="facebook_app_id">3271046286455963</string>
    <!--    <string name="fb_login_protocol_scheme">fb3271046286455963</string>-->
    <string name="fb_login_protocol_scheme">fb3271046286455963</string>
    <!--    <string name="fb_login_protocol_scheme">fb943988193037418</string>-->
    <string name="app_name">zr3i</string>
    <string name="register_new_account">إنشاء حساب جديد</string>
    <string name="first_name">الاسم الأول</string>
    <string name="last_name">الاسم الاخير</string>
    <string name="city">المدينة</string>
    <string name="mail">البريد الإلكتروني</string>
    <string name="url">الرابط</string>
    <string name="phone">رقم الجوال</string>
    <string name="pass">الرقم السري</string>
    <string name="confirm_pass">تأكيد الرقم السري</string>
    <string name="kind_of_account">نوع الحساب</string>
    <string name="mozare3">مزارع</string>
    <string name="supervisor">مشرف</string>
    <string name="terms_conditions_hint">Terms and Conditions</string>
    <string name="i_agree">أنا موافق على</string>
    <string name="quota_hint">الباقة</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="have_account">لديك حساب بالفعل؟</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="remember_me">تذركني</string>
    <string name="forget_pass">نسيت كلمة السر؟</string>
    <string name="not_have_account">ليس لديك حساب؟</string>
    <string name="forget_text">نسيت الرقم السري</string>
    <string name="restore_pass">استعادة الرقم السري</string>
    <string name="month">الشهر</string>
    <string name="day">اليوم</string>
    <string name="year">السنة</string>
    <string name="kind">النوع</string>
    <string name="country_hint">الدولة</string>
    <string name="back_to_login_activity">تسجيل الدخول</string>
    <string name="create_new_land">تسجيل أرض جديدة</string>
    <string name="places_app_key" translatable="false">AIzaSyDs8MC1sAo4e6y6y6Ycfa6JyLRdAaST82E</string>
    <!--    <string name="places_app_key" translatable="false">AIzaSyBVmLmVZtl7STte-v4lD2llDo96fVBx8-w</string>-->
    <!--    <string name="places_app_key" translatable="false">AIzaSyC-J-HZNhNSq2w4h9Jjut3Ep2s4SNONrAA</string>-->
    <string name="kind_of_map">نوع الخريطة</string>
    <string name="draw_polygon">رسم المخطط</string>
    <string name="delete_polygon">حذف المخطط</string>
    <string name="hay">الحي/المركز</string>
    <string name="number_of_zra3a">عدد دورات زراعة المحصول</string>
    <string name="space_of_contrct">مسساحة العقد</string>
    <string name="crops">المحصول </string>
    <string name="owener">المالك</string>
    <string name="continue_text">استمرار</string>
    <string name="desc">الوصف</string>
    <string name="error">خطأ</string>
    <string name="ok">حسناً</string>
    <string name="url2">ادخل رابط الدخول على موقع زرعي الخاص بك</string>
    <string name="done">تمت العملية بنجاح</string>
    <string name="store_land">تسجيل أرض جديدة</string>
    <string name="show_lands">عرض الأراضي</string>
    <string name="lands">الأراضي الزراعية</string>
    <string name="my_lands">الأراضي الزراعية</string>
    <string name="creation_date">تاريخ الإنشاء</string>
    <string name="last_update">آخر تحديث</string>
    <string name="show_details">عرض التفاصيل</string>
    <string name="edit_land">تعديل الأرض</string>
    <string name="farmers">المزارعين</string>
    <string name="map_location">خريطة الأرض</string>
    <string name="delete_land">حذف الأرض</string>
    <string name="crops_string">المحصول :</string>
    <string name="detialed_report">تقرير مفصل عن الأرض الزراعية ومؤشرات الغطاء النباتي</string>
    <string name="download_report">تحميل التقرير</string>
    <string name="soils_details">مؤشرات التربة</string>
    <string name="profile">الملف الشخصي</string>
    <string name="save_edits">حفظ التغييرات</string>
    <string name="usage">تفاصيل الإشتراك</string>
    <string name="usage_details">تفاصيل الإشتراك</string>
    <string name="price">السعر :</string>
    <string name="updated_date">تاريخ التجديد:</string>
    <string name="remaining_days">الأيام المتبقة على التجديد:</string>
    <string name="total_space">المساحة الكلية المتاحة:</string>
    <string name="used_space">المساحة المستخدمة:</string>
    <string name="remaining_space">المساحة المتبقية:</string>
    <string name="upgrade_account">ترقية الحساب</string>
    <string name="renewal_quota">تجديد الباقة</string>
    <string name="quota_details">الباقة:</string>
    <string name="used">المستخدم</string>
    <string name="remaining">المتبقي</string>
    <string name="change_pass">تغيير كلمة السر</string>
    <string name="current_pass">الرقم السري الحالي</string>
    <string name="new_pass">الرقم السري الجديد</string>
    <string name="new_pass_confirmation">تأكيد الرقم السري الجديد</string>
    <string name="edit_farmer">تعديل</string>
    <string name="farmer_name">اسم المزارع</string>
    <string name="age">العمر</string>
    <string name="national_id">الرقم القومي</string>
    <string name="address">العنوان</string>
    <string name="actual_space">المساحة الفعلية</string>
    <string name="warning">تحذير</string>
    <string name="warning_confirmation">هل أنت متأكد من أنك تريد الحذف؟!</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="add_farmer">لم تقم بتسجيل مزارعين من قبل : يمكنك البدء في إضافة المزارعين الآن : إضافة مزارع</string>
    <string name="add_farmer_link">إضافة مزارع</string>
    <string name="add_farmer_toolbar">إضافة مزارع</string>
    <string name="submit">حفظ التغيرات</string>
    <string name="zra3iin_montada">منتدى الزراعيين</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="confirm">تأكيد</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_at_zr3i">مرحباً بك في زرعي</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="no_lands">لا توجد أراضي</string>
    <string name="weather_state">حالة الطقس</string>
    <string name="temp">درجة الحرارة</string>
    <string name="humidity">الرطوبة</string>
    <string name="pressure">الضغط الجوي</string>
    <string name="wind">سرعة واتجاه الرياح</string>
    <string name="current_weather">الطقس الحالي</string>
    <string name="forcasting_by_days">معدلات الطقس حسب التاريخ</string>
    <string name="max_temp">درجة الحرارة العظمى</string>
    <string name="min_temp">درجة الحرارة الصغرى</string>
    <string name="sunrise">شروق الشمس</string>
    <string name="sunset">غروب الشمس</string>
    <string name="weather_forecast">توقعات الطقس</string>
    <string name="login_with_text">تسجيل الدخول بواسطة</string>
    <string name="update_to">تجديد لمدة:</string>
    <string name="total_price">السعر الإجمالي:</string>
    <string name="next_update">التجديد القادم:</string>
    <string name="month_update">شهر</string>
    <string name="current_quota">الباقة الحالية:</string>
    <string name="choose_new_quota">اختر الباقة الجديدة</string>
    <string name="calcualte_quota_hint">"سيتم احتساب الفرق وإعادة تعيين تاريخ التجديد القادم وعند انتهاء تاريخ التجديد القادم الجديد يمكنك تجديد الاشتراك الشهري</string>
    <string name="upgrade_to_new_quota">ترقية إلى الباقة الجديدة</string>
    <string name="back_to_home_page">عودة إلى الرئيسية</string>
    <string name="login_with_fb">تسجيل الدخول بواسطة</string>
    <string name="back_to_back">عودة</string>
    <string name="soil_info">بيانات التربة</string>
    <string name="temp_top">درجة حرارة السطح:</string>
    <string name="temp_10cm">درجة الحرارة عمق (10 cm):</string>
    <string name="humidity_land">رطوبة التربة:</string>
    <string name="violet">مؤشر الآشعة فوق البنفسجية:</string>
    <string name="internal_storage">internal storage</string>
    <string name="refresh">تحديث</string>
    <string name="details">التفاصيل</string>
    <string name="details_with_underline"><u>التفاصيل</u></string>
    <string name="scientist_background">الخلفية العلمية</string>
    <string name="current_weather_waithing_text_view">سوف تظهر هنا بيانات الطقس الحالي بعد تحليل بيانات القطعة الزراعية بواسطة القمر الصناعي (sentinel satellite),, حيث يستغرق الأمر عدة ساعات يرجى المحاولة لاحقاً</string>
    <string name="soil_indicators_waithing_text_view"> سوف تظهر هنا مؤشرات التربة بعد تحليل بيانات القطعة الزراعية بواسطة القمر الصناعي (sentinel satellite),, حيث يستغرق الأمر عدة ساعات يرجى المحاولة لاحقاً</string>
    <string name="weather_expectations_waithing_text_view">سوف تظهر هنا توقعات الطقس بعد تحليل بيانات القطعة الزراعية بواسطة القمر الصناعي (sentinel satellite),, حيث يستغرق الأمر عدة ساعات يرجى المحاولة لاحقاً</string>
    <string name="land_in_progress">جارى تحليل بيانات القطعة الزراعية بواسطة القمر الصناعي (sentinel satellite),, حيث يستغرق الأمر عدة ساعات يرجى المحاولة لاحقاً</string>
    <string name="number_of_zra3">عدد دورات الزراعة</string>
    <string name="fdan">فدان</string>

</resources>