<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".ui.activities.renewal_quota_acticity.RenewalQuotaActivity">

    <RelativeLayout
        android:id="@+id/toolbar_relative"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/upgrade_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/greenFateh" />

        <ImageView
            android:id="@+id/back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/greenFateh" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_relative"
        android:paddingTop="10dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="?actionBarSize"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/register_background_shape">

        <ProgressBar
            android:id="@+id/renew_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:indeterminate="true"
            android:theme="@style/ProgressBarCustom"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_gravity="center"
            android:layout_margin="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:text="@string/current_quota"/>
            <TextView
                android:id="@+id/quota_kind_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:text="@string/updated_date"/>
            <TextView
                android:id="@+id/updated_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:text="@string/choose_new_quota"/>
            <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                android:id="@+id/quota_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textAlignment="center"
                app:smsp_floatingLabelColor="@color/green"
                app:smsp_hint="@string/quota_hint"
                app:smsp_hintColor="#388E3C"
                app:smsp_itemColor="@color/green"
                app:smsp_itemListColor="@color/green"
                app:smsp_itemListHintBackgroundColor="#808080"
                app:smsp_itemListHintColor="#FFFFFF"
                app:smsp_multilineError="false"
                app:smsp_selectedItemListColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@color/labny">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_marginHorizontal="4dp"
                android:text="@string/calcualte_quota_hint"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>


        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_to_new_quota"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:paddingHorizontal="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/green_btn_shape"/>
</RelativeLayout>